fixed stockfish level limit EOL - fixed last move on withe not showing

--- a/frontend/src/pages/Game/index.css
+++ b/frontend/src/pages/Game/index.css
@@ -64,6 +64,10 @@
   .game {
     max-width: 90%;
   }
+  /* Added CSS class for moved-piece */
+.moved-piece {
+  background-color: yellow;
+}
   .chessboard-box {
     width: 100%;
   }
